Add Agent to so we can mock up authorization checks
This changes the API spec to specify that a sunet ID is required when
creating a request in the On-Behalf-Of header.

This changes the generated code such that we can get the principal for
the request and validate it in the handlers.

See #44 and #79
